# thumbrella

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  cloudflare.md  limits.md  mediaserver  notes.md  pyproject.toml  requirements.txt  rustfmt.toml  schema.md  tasks.md  todo.md
.cargo/: config.toml
.devcontainer/: devcontainer.json
crates/build-check/: Cargo.toml  build.rs
crates/build-check/src/: lib.rs
crates/thumbrella-server/: Cargo.toml
crates/thumbrella-server/src/: http_source.rs  lib.rs  main.rs  paged_io.rs  pipeline.rs  profile.rs  request.rs  result.rs  routes.rs  source.rs
crates/thumbrella-tier1/: Cargo.toml
crates/thumbrella-tier1/src/: cache.rs  config.rs  devpage.rs  dispatch.rs  http_source.rs  lib.rs  main.rs  media.rs  pipeline.rs  profile.rs  request.rs  request_state.rs  result.rs  routes.rs  source.rs  stream_buf.rs
crates/thumbrella-tier1/src/templates/: dev_card.html  dev_form.html  dev_results.html
crates/thumbrella-tier2/: Cargo.toml
crates/thumbrella-tier2/src/: lib.rs  main.rs  pipeline.rs  routes.rs
crates/thumbrella-types/: Cargo.toml
crates/thumbrella-types/src/: lib.rs  profile.rs  request.rs  result.rs  source.rs
crates/tier1/: Cargo.toml  build.rs
crates/tier1/src/: after.rs  assets.rs  cli.rs  config.rs  connect.rs  cook.rs  diag.rs  dispatch.rs  fetch_guard.rs  handoff.rs  http_buf.rs  lib.rs  media.rs  pipeline.rs  profile.rs  renderer.rs  request.rs  result.rs  routes.rs  source.rs  spec.rs  startup.rs  thumb.rs  url_safety.rs  ux.rs
crates/tier1/src/cache/: mod.rs  sqlite.rs
crates/tier1/src/pipeline/: connect.rs  deliver.rs  inspect.rs  mod.rs  shortcut.rs
crates/tier1/src/tracelog/: mod.rs  ndjson.rs
crates/tier2/: Cargo.toml  build.rs
crates/tier2/src/: avdecode.rs  lib.rs  renderer.rs
crates/tier3/: Cargo.toml  build.rs
crates/tier3/src/: env_check.rs  renderer.rs  sandbox.rs  sanitize_glb.py  scratch.rs
docker/: .dockerignore  Dockerfile  build.sh  docker-compose.yml
ffs/: build-linux.sh  build-windows.ps1
ffs/ffs-build/: Cargo.toml  build.rs
ffs/ffs-build/src/: lib.rs
ffs/ffs-check/: Cargo.toml  build.rs
ffs/ffs-check/src/: lib.rs
ffs/ports/ffmpeg/: portfile.patch
ffs/triplets/: x64-windows-static.cmake
release/: README.release.md
release/dockerhub/: Dockerfile  README.md  README.release.md  build.sh  example
release/npmjs/: README.md  README.release.md  example  package.json
release/npmjs/scripts/: stage-binaries.sh  stage-from-release.sh  sync-readme.sh
scripts/: build-ffmpeg-static.sh  gen_placeholders.py  mediaserver.sh  release.sh
src/: lib.rs
tier1/: Cargo.toml  build.rs  build_placeholders.py
tier1/src/: after.rs  assets.rs  check.rs  cli.rs  config.rs  connect.rs  cook.rs  diag.rs  dispatch.rs  fetch_guard.rs  handoff.rs  http_buf.rs  landing.html  lib.rs  license.txt  media.rs  renderer.rs  request.rs  result.rs  routes.rs  source.rs  spec.rs  startup.rs  url_safety.rs  ux.rs
tier1/src/cache/: cloud.rs  memory.rs  mod.rs  sqlite.rs
tier1/src/pipeline/: connect.rs  deliver.rs  inspect.rs  mod.rs  shortcut.rs
tier1/src/tracelog/: mod.rs  ndjson.rs
tier2/: Cargo.toml  build.rs  build_static_ffmpeg.sh  download_ffmpeg_windows.ps1
tier2/src/: avdecode.rs  renderer.rs
tier2/src/ffmpeg/: generate_bindings.sh  linux_x64.rs  mod.rs
tier3/: Cargo.toml  build.rs
tier3/src/: env_check.rs  lib.rs  renderer.rs  sandbox.rs  scratch.rs  usd_extract.py
