[workspace]
resolver = "2"

members = [
    "crates/tier1",
    "crates/tier2",
    "crates/tier3",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 0      # no optimizations — required for reliable variable inspection
debug = 2          # full debug info (variables, types, not just line tables)
incremental = true
codegen-units = 256

# Compile dependencies with full optimization so heavy crates (image, jpeg-encoder,
# ravif, etc.) run at near-release speed. They're cached after the first build so
# this only adds time on a clean build.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
