[workspace.package]
name = "Thumbrella"
homepage = "https://thumbrella.dev"
repository = "https://github.com/thumbrella-dev/thumbrella"
description = "Fast thumbnail server for online media"
keywords = ["thumbnail", "media"]
categories = ["web-programming::http-server", "multimedia", "graphics", "rendering"]
license = "Apache-2.0"
version = "0.3.0"
edition = "2024"

[workspace]
resolver = "2"
default-members = ["crates/tier3"]

members = [
    "crates/tier1",
    "crates/tier2",
    "crates/tier3",
]


[profile.dev]
opt-level = 0      # no optimizations — required for reliable variable inspection
debug = 2          # full debug info (variables, types, not just line tables)
incremental = true
codegen-units = 256

# Dev build uses optimized dependencies for efficiency
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
