[workspace.package]
homepage = "https://thumbrella.dev"
repository = "https://github.com/thumbrella-dev/thumbrella"
description = "Fast thumbnail server for online media"
keywords = ["thumbnail", "media"]
categories = ["web-programming::http-server", "multimedia", "graphics", "rendering"]
license = "Apache-2.0"
version = "0.6.0"
edition = "2024"

[package]
name = "thumbrella"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

# Distinct lib name avoids a doc-output collision with tier3's `thumbrella` bin.
[lib]
name = "thumbrella_doc"

[workspace]
resolver = "2"
default-members = ["tier3"]
members = ["ffs/ffs-check", "ffs/ffs-build", "tier1", "tier2", "tier3"]


[profile.dev]
opt-level = 0      # no optimizations, required for reliable variable inspection
debug = 2          # full debug info (variables, types, not just line tables)
incremental = true
codegen-units = 256

# Dev build uses optimized dependencies for efficiency
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
