[package]
name = "tier2"
version.workspace = true
edition.workspace = true
description = "Static tier 2 Thumbrella server"

[dependencies]
tier1 = { path = "../tier1" }
ffs-build = { path = "../ffs/ffs-build" }

# FFmpeg — tier2 codes against these directly; ffs-build handles linking
ffmpeg-next = "8"
ffmpeg-sys-next = "8"

serde_json   = "1"
image        = { version = "0.25", default-features = false, features = ["webp"] }
jxl-oxide    = "0.12"
resvg        = "0.47"
# jpeg-decoder: has specialized dct power-of-2 scaler
jpeg-decoder = { version = "0.3", default-features = false }
tokio   = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
