[package]
name = "tier3"
version.workspace = true
edition.workspace = true
description = "Featured tier 3 Thumbrella server"

[dependencies]
tier1 = { path = "../tier1" }
tier2 = { path = "../tier2" }

# image: used by tier-3 subprocess renderers to decode output images (JPEG,
# PNG) produced by external tools.
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

# libloading: dlopen-based detection and dispatch for optional shared libraries
# (e.g. libpdfium, libblender, …).  Each renderer backend is probed at startup;
# only available libraries are registered in the dispatch table.
libloading = "0.8"

# which: locate external command-line tools on $PATH (e.g. ffmpeg, inkscape,
# blender).  Used for subprocess-based renderers.
which = "7"

# tempfile: scratch arena for subprocess renderers.  Creates temporary
# directories that are cleaned up on drop.
tempfile = "3"

# libc: OS-level sandbox primitives (setrlimit, prctl, capset).  Used to
# apply resource limits and drop capabilities on subprocess renderers.
libc = "0.2"

# serde: serialization for env_check reports.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# futures: stream processing for scratch arena downloads (already a transitive
# dep via tier1; listed explicitly for StreamExt import).
futures = "0.3"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
