[package]
name = "thumbrella-tier1"
version = "0.1.0"
edition = "2024"
default-run = "thumbrella-tier1"

[features]
default = ["native-http"]
native-http = ["dep:reqwest"]
worker-fetch = []

[dependencies]
axum = "0.8"
axum-extra = { version = "0.10", features = ["query"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }
image = { version = "0.25", default-features = true, features = ["jpeg", "png", "webp", "gif"] }
infer = "0.16"
futures = "0.3"
mozjpeg-rs = "0.9"
zip = { version = "2", default-features = false, features = ["deflate"] }
base64 = "0.22"
v_htmlescape = "0.15"
time = { version = "0.3", features = ["formatting"] }
sha2 = "0.10"
