[package]
name = "thumbrella-tier2"
version = "0.1.0"
edition = "2024"

[dependencies]
thumbrella-tier1 = { path = "../thumbrella-server" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
ffmpeg-next = "7"
tempfile = "3"
image = { version = "0.25", default-features = true }
infer = "0.16"
