[package]
name = "tier2"
version = "0.1.0"
edition = "2024"
description = "Thumbrella Tier 2 — extended thumbnail service"

[[bin]]
name = "tier2"
path = "src/bin/tier2.rs"
required-features = ["native"]

[features]
default = ["native"]

native = [
    "dep:tokio",
    "dep:tracing-subscriber",
    "dep:clap",
    "dep:reqwest",
]

[dependencies]
tier1 = { path = "../tier1" }

# ── FFmpeg bindings ────────────────────────────────────────────────────────────
# `static` links against the .a files in $FFMPEG_DIR (set in .cargo/config.toml).
# We disable default features (avdevice, avfilter, postproc) because our custom
# static FFmpeg build only includes avcodec, avformat, avutil, swscale, swresample.
# ffmpeg-next is the safe high-level wrapper; ffmpeg-sys-next is the raw FFI layer.
ffmpeg-sys-next = { version = "7.1.3", default-features = false, features = [
    "static",
    "avcodec",
    "avformat",
    "swscale",
    "swresample",
] }
ffmpeg-next = { version = "7.1.0", default-features = false, features = [
    "codec",
    "format",
    "software-resampling",
    "software-scaling",
] }

# ── Decode / metadata ───────────────────────────────────────────────────────────
serde_json   = "1"
image        = { version = "0.25", default-features = false }
# jpeg-decoder: listed directly to access scale() for DCT-level power-of-two
# downscaling — avoids decoding the full-resolution JPEG pixel buffer when
# only a small thumbnail is needed.
jpeg-decoder = { version = "0.3", default-features = false }
# ── Native-only ────────────────────────────────────────────────────────────────
tokio              = { version = "1", features = ["full"],           optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"],  optional = true }
clap               = { version = "4",  features = ["derive"],        optional = true }
reqwest            = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"], optional = true }
