[package]
name = "ffs-build"
description = "Bundled static FFmpeg — version info and build metadata"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

# ffs-check validates the build environment before ffmpeg-sys-next runs.
# It's a build-dependency so its build.rs fires first.
[build-dependencies]
ffs-check = { path = "../ffs-check" }

[target.'cfg(windows)'.build-dependencies]
vcpkg = "0.2"

[dependencies]
ffs-check = { path = "../ffs-check" }
ffmpeg-next = "8"
